1023 - Fix display of LA and Govt text attributes 1021 - Fix issue with missing CSRF token in incogneto mode

--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/government.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/government.htm
@@ -5,7 +5,7 @@
             <dt class="registry_types">Government Name</dt>
             <dd data-bind="component: { name: 'text-widget',
                                             params: {
-                                                value: getFirstNodeValue('government_name'),
+                                                value: ko.unwrap(getFirstNodeValue('government_name')),
                                                 state: 'display_value'
                                             }
                                         }"></dd>
