--- a/src/bcrhp/bcrhp/templates/views/search.htm
+++ b/src/bcrhp/bcrhp/templates/views/search.htm
@@ -8,3 +8,8 @@
 <link rel="stylesheet" type="text/css" href="{% webpack_static 'plugins/slick/accessible-slick-theme.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% webpack_static 'css/index-slider.css' %}">
 {% endblock css %}
+
+{% block main_content %}
+{{ block.super }}
+{% csrf_token %}
+{% endblock main_content %}
